added logout functionality

--- a/apps/parks/templates/parks/map.html
+++ b/apps/parks/templates/parks/map.html
@@ -20,8 +20,8 @@
     <body>
         <nav class="navbar navbar-dark bg-dark">
             <h3 class="text-white">Dojo Parks</h3>
-            <a class='ml-auto mr-3' href="#">Home</a>
-            <a href="#">Logout</a>
+            <a class='ml-auto mr-3' href="/">Home</a>
+            <a href="/logout">Logout</a>
         </nav>
         <div class="container-fluid">
             <div class="row align-items-center">
