--- a/dojo_parks/apps/parks/templates/parks/map.html
+++ b/dojo_parks/apps/parks/templates/parks/map.html
@@ -69,55 +69,39 @@
                 }
                 var map = new google.maps.Map(document.getElementById("map"), options);
 
-                google.maps.event.addListener(map, 'click', function(event){
-                    addMarker({coords: event.latLng});
-                });
-
                 // STORING ALL THE MARKERS IN AN ARRAY
-                // {% for park in all_parks.latitude %}
-                // {% for park in all_parks.longitude %}
                 // var markers = [
                 // {
-                //     coords: {lat: {{park.latitude}}, lng: {{park.longitude}}},
-                //     // iconImage: {url:"/static/parks/img/icon.png", scaledSize: new google.maps.Size(30,30)},
-                //     // content: '<p><strong>Bellevue, WA</strong></p><p>Butthole, WA</p>'
+                //     coords: coords,
+                //     iconImage: {url:"/static/parks/img/icon.png", scaledSize: new google.maps.Size(30,30)},
+                //     content: '<p><strong>Bellevue, WA</strong></p><p>Butthole, WA</p>'
                 // }
                 // ]
-                // {% endfor %}
-                // {% endfor %}
 
                 // LOOPING THROUGH ARRAY TO DISPLAY MARKERS
                 // for (var i = 0; i < markers.length; i++){
                 //     addMarker(markers[i]);
                 // }
+
+                marker = []
                 {% for park in all_parks %}
-                x = {{park.latitude}}
-                y = {{park.longitude}}
-                coords = {lat: x, lng: y}
-                addMarker(coords)
+                coords = {lat: {{park.latitude}}, lng: {{park.longitude}}}
+                marker.push(coords)
                 {% endfor %}
+
+                for (var i = 0; i < marker.length; i++){
+                    addMarker(marker[i]);
+                }
+
 
                 // THE FUNCTION FOR ADDING A MARKER
                 function addMarker(coords){
                     var marker = new google.maps.Marker({
                         position: coords,
                         map: map,
+                        icon: {url: "/static/parks/img/icon.png", scaledSize: new google.maps.Size(30,30)},
                     });
-
-                    if (props.iconImage){
-                        marker.setIcon(props.iconImage);
-                    }
-
-                    if (props.content){
-                        var infoWindow = new google.maps.InfoWindow({
-                            content: props.content
-                        });
-                        marker.addListener('click', function(){
-                            infoWindow.open(map,marker);
-                        });
-                    }
                 }
-                
             }
 
 
