--- a/dojo_parks/apps/parks/templates/parks/parkinfo.html
+++ b/dojo_parks/apps/parks/templates/parks/parkinfo.html
@@ -3,10 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Park Info</title>
 </head>
 
@@ -29,17 +36,20 @@
                 <p class="card-text"> Reviews: {{ selected_park.review }}</p>
 
                 <p class="card-text"> Rating: {{ selected_park.rating }}</p>
+                <div class="hours d-inline-block">
+                    <p class="card-text">{{formatted_hours}}</p>
 
-                <p class="card-text">{{formatted_hours}}</p>
-                
-                
 
-                {% for hours in split_hours %}
+
+                    {% for hours in split_hours %}
                     <p class="card-text"> {{ hours }}</p>
-                {% endfor %}
-                
-                <p class="card-text">{{formatted_hours2}}</p>
+                    {% endfor %}
 
+                    <p class="card-text">{{formatted_hours2}}</p>
+                </div>
+                <img class="rig-img d-inline-block align-top offset-1"
+                src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference={{photo_reference}}&key=AIzaSyDcuEo_YNfM-UN8VWL9IeXtfJHR30R4I_0"
+                alt="Pic From Google">
                 <p class="card-text">
                     <a href="{{ selected_park.website }}">Click here to visit this park's website</a>
                 </p>
@@ -47,8 +57,10 @@
                 <a href="/" class="btn btn-primary">Home</a>
 
                 <p class="small text-right">Created by: {{ selected_park.created_by.first_name }}</p>
+
             </div>
         </div>
+
     </div>
 </body>
 
