semi working photos

--- a/dojo_parks/apps/parks/templates/parks/map.html
+++ b/dojo_parks/apps/parks/templates/parks/map.html
@@ -111,6 +111,9 @@
                         marker.addListener('click', function(){
                             infoWindow.open(map,marker);
                         });
+                        // marker.addListener('click', function(){
+                        //     infoWindow.close(marker);
+                        // });
                     }
                 }
                 
