--- a/dojo_parks/apps/parks/templates/parks/parkinfo.html
+++ b/dojo_parks/apps/parks/templates/parks/parkinfo.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Park Info</title>
+    <style>
+        .carousel-inner img {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -59,10 +65,45 @@
                         <a href="/" class="btn btn-primary">Home</a>
                     </div>
                     <div class="col-6">
-                        <img style="max-height: 350px" class="rig-img d-inline-block align-top  z-depth-3"
-                            src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference={{ photo }}&key=AIzaSyDcuEo_YNfM-UN8VWL9IeXtfJHR30R4I_0"
-                            alt="">
+                        
+                        <div id="demo" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                            <ul class="carousel-indicators">
+                                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                                <li data-target="#demo" data-slide-to="1"></li>
+                                <li data-target="#demo" data-slide-to="2"></li>
+                            </ul>
+                            <!-- The slideshow -->
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img style="height: 350px" class=""
+                                    src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference={{ photo0 }}&key=AIzaSyDcuEo_YNfM-UN8VWL9IeXtfJHR30R4I_0"
+                                    alt="">
+                                </div>
+                                <div class="carousel-item">
+                                    <img style="height: 350px" class=""
+                                    src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference={{ photo1 }}&key=AIzaSyDcuEo_YNfM-UN8VWL9IeXtfJHR30R4I_0"
+                                    alt="">
+                                </div>
+                                <div class="carousel-item">
+                                    <img style="height: 350px" class=""
+                                    src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference={{ photo2 }}&key=AIzaSyDcuEo_YNfM-UN8VWL9IeXtfJHR30R4I_0"
+                                    alt="">
+                                </div>
+                            </div>
+                            
+                            <!-- Left and right controls -->
+                            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                <span class="carousel-control-prev-icon"></span>
+                            </a>
+                            <a class="carousel-control-next" href="#demo" data-slide="next">
+                                <span class="carousel-control-next-icon"></span>
+                            </a>
+                        </div>
+
                     </div>
+
+
                     <div class="row offset-10 mt-5">
                         <p class="small">Created by: {{ selected_park.created_by.first_name }}</p>
                     </div>
