--- a/dojo_parks/apps/parks/templates/parks/darkmap.html
+++ b/dojo_parks/apps/parks/templates/parks/darkmap.html
@@ -22,7 +22,7 @@
     <body>
         <nav class="navbar navbar-dark bg-dark">
             <h3 class="text-white">Dojo Parks</h3>
-            <a href="darkmode" class = 'ml-auto mr-3'><button class='btn btn-outline-info btn-sm'>Night Mode</button></a>
+            <a href="/" class = "ml-auto mr-3"><button class='btn btn-outline-info btn-sm'>Day Mode</button></a>
             <a class='ml-auto mr-3' href="/">Home</a>
             <a href="/logout">Logout</a>
         </nav>
@@ -75,7 +75,87 @@
             function initMap() {
                 var options = {
                     zoom: 12,
-                    center: {lat: {{last_park.latitude}}, lng: {{last_park.longitude}}}
+                    center: {lat: {{last_park.latitude}}, lng: {{last_park.longitude}}},
+                    styles: [
+                        {elementType: 'geometry', stylers: [{color: '#242f3e'}]},
+                        {elementType: 'labels.text.stroke', stylers: [{color: '#242f3e'}]},
+                        {elementType: 'labels.text.fill', stylers: [{color: '#746855'}]},
+                        {
+                        featureType: 'administrative.locality',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#d59563'}]
+                        },
+                        {
+                        featureType: 'poi',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#d59563'}]
+                        },
+                        {
+                        featureType: 'poi.park',
+                        elementType: 'geometry',
+                        stylers: [{color: '#263c3f'}]
+                        },
+                        {
+                        featureType: 'poi.park',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#6b9a76'}]
+                        },
+                        {
+                        featureType: 'road',
+                        elementType: 'geometry',
+                        stylers: [{color: '#38414e'}]
+                        },
+                        {
+                        featureType: 'road',
+                        elementType: 'geometry.stroke',
+                        stylers: [{color: '#212a37'}]
+                        },
+                        {
+                        featureType: 'road',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#9ca5b3'}]
+                        },
+                        {
+                        featureType: 'road.highway',
+                        elementType: 'geometry',
+                        stylers: [{color: '#746855'}]
+                        },
+                        {
+                        featureType: 'road.highway',
+                        elementType: 'geometry.stroke',
+                        stylers: [{color: '#1f2835'}]
+                        },
+                        {
+                        featureType: 'road.highway',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#f3d19c'}]
+                        },
+                        {
+                        featureType: 'transit',
+                        elementType: 'geometry',
+                        stylers: [{color: '#2f3948'}]
+                        },
+                        {
+                        featureType: 'transit.station',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#d59563'}]
+                        },
+                        {
+                        featureType: 'water',
+                        elementType: 'geometry',
+                        stylers: [{color: '#17263c'}]
+                        },
+                        {
+                        featureType: 'water',
+                        elementType: 'labels.text.fill',
+                        stylers: [{color: '#515c6d'}]
+                        },
+                        {
+                        featureType: 'water',
+                        elementType: 'labels.text.stroke',
+                        stylers: [{color: '#17263c'}]
+                        }
+                    ]
                 }
                 var map = new google.maps.Map(document.getElementById("map"), options);
 
