--- a/dojo_parks/apps/parks/templates/parks/darkparkinfo.html
+++ b/dojo_parks/apps/parks/templates/parks/darkparkinfo.html
@@ -23,14 +23,18 @@
         a{
             color:  rgb(143, 196, 209);
         }
+
+        .container-fluid {
+            height:100vh;
+        }
     </style>
 </head>
 
 <body>
     <div class="container-fluid bg-dark">
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark border-bottom border-light">
             <h3 class="text-white">Dojo Parks</h3>
-            <a class='ml-auto mr-3' href="/">Home</a>
+            <a class='ml-auto mr-3' href="/parks/darkmode">Home</a>
             <a href="/logout">Logout</a>
         </nav>
         <div class="card w-50 offset-3 mt-5 border border-light bg-dark text-white">
