--- a/dojo_parks/apps/parks/templates/parks/parkinfo.html
+++ b/dojo_parks/apps/parks/templates/parks/parkinfo.html
@@ -25,10 +25,10 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-info">
             <h3 class="text-white">Dojo Parks</h3>
-            <a class='ml-auto mr-3' href="/">Home</a>
-            <a href="/logout">Logout</a>
+            <a class='ml-auto mr-3 text-light' href="/">Home</a>
+            <a class = 'text-light' href="/logout">Logout</a>
         </nav>
         <div class="card w-50 offset-3 mt-5 border border-info">
             {#<img class="card-img-top" src="/images/pathToYourImage.png" alt="Card image cap">#}
