--- a/dojo_parks/apps/parks/templates/parks/darkparkinfo.html
+++ b/dojo_parks/apps/parks/templates/parks/darkparkinfo.html
@@ -30,7 +30,7 @@
     <div class="container-fluid bg-dark">
         <nav class="navbar navbar-dark bg-dark">
             <h3 class="text-white">Dojo Parks</h3>
-            <a class='ml-auto mr-3' href="/">Home</a>
+            <a class='ml-auto mr-3' href="/parks/darkmode">Home</a>
             <a href="/logout">Logout</a>
         </nav>
         <div class="card w-50 offset-3 mt-5 border border-light bg-dark text-white">
